Add dataclass refresher

--- a/notebooks/1-introduction-and-refreshers.ipynb
+++ b/notebooks/1-introduction-and-refreshers.ipynb
@@ -267,17 +267,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However in certain cases it can be useful to have a way to enforce type annotations at runtime. This is where the [pydantic](https://pydantic-docs.helpmanual.io/) library comes into play. Pydantic is a library that allows to define data classes with type annotations and to validate the input data against the type annotations."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Refresher 2: Class Definitions\n",
     "\n",
-    "Recall that classes in Python are defined with the `class` keyword followed by the name of the class (usually capitalized) and a colon. Class and instance methods are defined inside the class by indenting once. Let's create a simple class to represent a two dimensional point coordinate. I will add \"V1\" to the end of the class name so that we can make improvements later (\"V2\", \"V3\", etc.) and compare versions."
+    "Recall that classes in Python are defined with the `class` keyword followed by the name of the class (usually capitalized) and a colon. Class and instance methods are defined inside the class by indenting once. Let's create a simple class to represent a two dimensional point coordinate. I will add \"V1\" to the end of the class name so that we can make improvements later (\"V2\", \"V3\", etc.) and compare versions.\n",
+    "\n",
+    "Quick survey:\n",
+    "- Who knows what type annotations are?\n",
+    "- Who is using type annotations regularly?\n",
+    "- Who would like to use type annotations more, but is not doing it yet?"
    ]
   },
   {
@@ -393,12 +390,125 @@
     "\n",
     "![image-4.png](attachment:image-4.png)\n",
     "\n",
-    "Notice the yellow squiggly lines under `x=\"5\"` and `y=\"7\"` in the creation of `p1` and the lack of yellow squiggly lines under `x=-1` and `y=4` in the creation of `p2`.\n",
-    "\n",
-    "## Pydantic models\n",
-    "\n",
-    "Now that we've reviewed type hints and class defintions, let's convert the above example to a Pydantic model. This will involve only a few changes and will noticeably improve the code readability even further..."
+    "Notice the yellow squiggly lines under `x=\"5\"` and `y=\"7\"` in the creation of `p1` and the lack of yellow squiggly lines under `x=-1` and `y=4` in the creation of `p2`."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Refresher 3: Data Classes\n",
+    "\n",
+    "There is another small problem with the class definiton we introduced above: it includes a lot of so called [\"Boilerplate Code\"](https://en.wikipedia.org/wiki/Boilerplate_code). This is code that is just required to make the defintion work and does not add any functionality. In this case the boilerplate code is the `__init__` method. This method is required to initialize the class, but it does not add any functionality.\n",
+    "\n",
+    " In fact, the `__init__` method is so common that Python introduced shortcuts im the standard library to define it: the `dataclass` decorator. Let's rewrite the `PointV2` class using the `dataclass` decorator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class PointV3:\n",
+    "    \"\"\"Representation of a two-dimensional point coordinate.\"\"\"\n",
+    "\n",
+    "    x: float\n",
+    "    y: float\n",
+    "\n",
+    "    def distance_to(self, other: \"PointV3\") -> float:\n",
+    "        \"\"\"Computes the distance to another `PointV3`.\"\"\"\n",
+    "        dx = self.x - other.x\n",
+    "        dy = self.y - other.y\n",
+    "        return (dx**2 + dy**2) ** 0.5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This allows to simplkify the class definiton and skip the definiton of the `__init__` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = PointV3(x=5, y=7)\n",
+    "p2 = PointV3(x=-1, y=4)\n",
+    "print(p1.distance_to(other=p2))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are similar concepts to `dataclass`, such as `namedtuple`, which allows to define a class with a fixed set of attributes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple\n",
+    "\n",
+    "PointV4 = namedtuple(\"PointV4\", \"x y\")\n",
+    "\n",
+    "p1 = PointV4(x=5, y=7)\n",
+    "\n",
+    "display(p1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However they have very specific use cases and are not as flexible as `dataclass`. For example, `namedtuple` does not directly allow to define methods and attributes are immutable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "p1.x = 64"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All these limitations and issues listed above can be addressed with the [pydantic](https://pydantic-docs.helpmanual.io/) library. This library allows to define data classes with type annotations and to validate the input data against the type annotations.\n",
+    "\n",
+    "## Exercise 1:\n",
+    "\n",
+    "- Just take some to breifly discuss the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
