Copy over PointV1 and PointV2 definitions

--- a/notebooks/2-basic-usage.ipynb
+++ b/notebooks/2-basic-usage.ipynb
@@ -17,6 +17,69 @@
     "* Default values and optional values\n",
     "* Model Config and Config.extra = “forbid”\n",
     "\n",
+    "For comparison we fisrt start with the simple class definitons we saw in the introduction:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec44701d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PointV1:\n",
+    "    \"\"\"Representation of a two-dimensional point coordinate.\"\"\"\n",
+    "\n",
+    "    def __init__(self, x, y):\n",
+    "        \"\"\"Initializes a PointV1 with the given coordinates.\"\"\"\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    def distance_to(self, other):\n",
+    "        \"\"\"Computes the distance to another `PointV1`.\"\"\"\n",
+    "        dx = self.x - other.x\n",
+    "        dy = self.y - other.y\n",
+    "        return (dx**2 + dy**2) ** 0.5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "283c10d3",
+   "metadata": {},
+   "source": [
+    "And the version with type annotations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92b56a31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PointV2:\n",
+    "    \"\"\"Representation of a two-dimensional point coordinate.\"\"\"\n",
+    "\n",
+    "    def __init__(self, x: float, y: float) -> None:\n",
+    "        \"\"\"Initializes a PointV2 with the given coordinates.\"\"\"\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    def distance_to(self, other: \"PointV2\") -> float:\n",
+    "        \"\"\"Computes the distance to another `PointV2`.\"\"\"\n",
+    "        dx = self.x - other.x\n",
+    "        dy = self.y - other.y\n",
+    "        return (dx**2 + dy**2) ** 0.5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ffcf13c4",
+   "metadata": {},
+   "source": [
+    "\n",
     "## Pydantic models\n",
     "\n",
     "Now that we've reviewed type hints and class defintions, let's convert the above example to a Pydantic model. This will involve only a few changes and will noticeably improve the code readability even further..."
