Add nametuple and TypedDict as examples

--- a/notebooks/1-introduction-and-refreshers.ipynb
+++ b/notebooks/1-introduction-and-refreshers.ipynb
@@ -272,9 +272,9 @@
     "Recall that classes in Python are defined with the `class` keyword followed by the name of the class (usually capitalized) and a colon. Class and instance methods are defined inside the class by indenting once. Let's create a simple class to represent a two dimensional point coordinate. I will add \"V1\" to the end of the class name so that we can make improvements later (\"V2\", \"V3\", etc.) and compare versions.\n",
     "\n",
     "Quick survey:\n",
-    "- Who knows what type annotations are?\n",
-    "- Who is using type annotations regularly?\n",
-    "- Who would like to use type annotations more, but is not doing it yet?"
+    "- Who knows what class definitions are?\n",
+    "- Who is using class definitions regularly?\n",
+    "- Who would like to use class definitons more, but is not doing it yet?"
    ]
   },
   {
@@ -398,11 +398,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Refresher 3: Data Classes\n",
+    "### Refresher 3: Data Classes and \"Friends\"\n",
     "\n",
-    "There is another small problem with the class definiton we introduced above: it includes a lot of so called [\"Boilerplate Code\"](https://en.wikipedia.org/wiki/Boilerplate_code). This is code that is just required to make the defintion work and does not add any functionality. In this case the boilerplate code is the `__init__` method. This method is required to initialize the class, but it does not add any functionality.\n",
+    "There is another small problem with the class definitons we introduced above: it includes a lot of so called [\"Boilerplate Code\"](https://en.wikipedia.org/wiki/Boilerplate_code). This is code that is just required to make the defintion work and does not add any functionality. In this case the boilerplate code is the `__init__` method. This method is required to initialize the class, but it does not add any functionality.\n",
     "\n",
-    " In fact, the `__init__` method is so common that Python introduced shortcuts im the standard library to define it: the `dataclass` decorator. Let's rewrite the `PointV2` class using the `dataclass` decorator."
+    " In fact, the `__init__` method is so common that Python introduced various shortcuts in the standard library to simplfy the definiton of such data structures. The most common ones are:\n",
+    " \n",
+    " - the `dataclass` decorator\n",
+    " - the `namedtuple` method\n",
+    " - the `TypedDict` type\n",
+    "\n",
+    "\n",
+    " Quick survey:\n",
+    "  - Who has used `dataclass`, `namedtuple` or `TypedDict` before?\n",
+    "\n",
+    "\n",
+    "Let's write the Point class, but this time using the `dataclass` decorator:"
    ]
   },
   {
@@ -433,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This allows to simplkify the class definiton and skip the definiton of the `__init__` method."
+    "This allows to simplify the class definition and skip the definiton of the `__init__` method."
    ]
   },
   {
@@ -492,15 +503,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypedDict\n",
+    "\n",
+    "\n",
+    "class PointV5(TypedDict):\n",
+    "    x: float\n",
+    "    y: float"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All these limitations and issues listed above can be addressed with the [pydantic](https://pydantic-docs.helpmanual.io/) library. This library allows to define data classes with type annotations and to validate the input data against the type annotations.\n",
-    "\n",
-    "## Exercise 1:\n",
-    "\n",
-    "- Just take some to breifly discuss the "
+    "However this is used in a rather unconventional way:"
    ]
   },
   {
@@ -508,6 +529,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "p1: PointV5 = {\"x\": 5, \"y\": 7}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And the types are not enforced during runtime, such that they can be changed anytime later:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1[\"x\"] = \"34\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `TypedDict` is agian mostly useful for static code analysis, in which case the statement above would be highlighted as an error. \n",
+    "\n",
+    "All these limitations and issues listed above can be addressed with the [pydantic](https://pydantic-docs.helpmanual.io/) library. This library allows to define data classes with type annotations and to validate the input data against the type annotations.\n",
+    "\n",
+    "## Exercise 1:\n",
+    "\n",
+    "- Just take some to briefly discuss with your neighbours the examples where dynamic typing leads to unexpected behaviour. Have you encountered similar issues in the past? How did you solve them? \n",
+    "- Also take some time to dicuss the concepts of type annotations, class definitions and data classes we reviewed above. Have you used them in the past? What are your experiences? "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
