Add raises exception tag

--- a/notebooks/3-advanced-usage-part-I.ipynb
+++ b/notebooks/3-advanced-usage-part-I.ipynb
@@ -200,7 +200,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
     "coordinates = {\n",
