add basic usage exercise

--- a/notebooks/2-basic-usage.ipynb
+++ b/notebooks/2-basic-usage.ipynb
@@ -519,7 +519,45 @@
    "source": [
     "Notice that `B`, which inherits from `A`, inherits the field, `x`, and configuration, `extra = Extra.forbid` of `A`, while `C`, which is a base Pydantic model, does not contain the field `x` and obtains the default value of `Extra.ignore` for the `extra` configuration.\n",
     "\n",
-    "A detailed description of possible configurations can be found in the \"Model Config\" documentation page: https://docs.pydantic.dev/latest/usage/model_config/"
+    "A detailed description of possible configurations can be found in the \"Model Config\" documentation page: https://docs.pydantic.dev/latest/usage/model_config/\n",
+    "\n",
+    "## Exercise 2\n",
+    "\n",
+    "Consider the following set of weather data for the city of Murmansk, Russia:\n",
+    "\n",
+    "```python\n",
+    "data_samples = [\n",
+    "    {\n",
+    "        \"date\": \"2023-05-20\",\n",
+    "        \"temperature\": 62.2,\n",
+    "        \"isCelsius\": False,\n",
+    "        \"airQualityIndex\": \"24\",\n",
+    "        \"sunriseTime\": \"01:26\",\n",
+    "        \"sunsetTime\": \"00:00\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"date\": \"2023-05-21\",\n",
+    "        \"temperature\": \"64.4\",\n",
+    "        \"isCelsius\": \"not true\",\n",
+    "        \"airQualityIndex\": 23,\n",
+    "        \"sunriseTime\": \"01:10\",\n",
+    "        \"sunsetTime\": \"00:16\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"date\": \"2023-05-22\",\n",
+    "        \"temperature\": 14.4,\n",
+    "        \"airQualityIndex\": 21,\n",
+    "    },\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "Write a script that computes and prints the average temperature (in celsius) in Murmansk for the dates provided. In your script, you should include a Pydantic model capable of parsing a single sample from the list of data samples above. You should parse each data sample one at a time using a `for` loop. (We will see how to parse the entire list simultaneously in the next section of this tutorial.)\n",
+    "\n",
+    "Some potentially helpful notes:\n",
+    "* Some samples are missing data. You should decide how to handle these without inserting new data yourself. Hint: refer to the section \n",
+    "* Some values may produces errors and may need modification.\n",
+    "* You may parse dates and times as strings for this exercise. (We will see a better way to parse dates and times later in this tutorial.)\n",
+    "* You may assume `airQualityIndex` is an integer valued categorical variable."
    ]
   }
  ],
