add serialization/deserialization exercise instructions

--- a/notebooks/4-serialisation-and-deserialisation.ipynb
+++ b/notebooks/4-serialisation-and-deserialisation.ipynb
@@ -653,7 +653,18 @@
    "source": [
     "## Performance remarks for serialization\n",
     "\n",
-    "???"
+    "???\n",
+    "\n",
+    "## Exercise 4\n",
+    "\n",
+    "Now let's build upon the previous exercise and compare this year's weather in Austin, TX to historical trends. The file located at `exercises_data/noaa_long_term_avgs.json` contains long-term daily averages and standard deviations of temperature data for Austin, TX (the airport weather station). This data was obtained from https://www.ncdc.noaa.gov/cdo-web/webservices/v2. You should examine the data and build a Pydantic model capable of parsing and validating this file (e.g. using `pydantic.BaseModel.parse_file`). Your model should also have methods to compute the upper and lower bounds of each daily average based on the standard deviations provided in the data.\n",
+    "\n",
+    "Tasks:\n",
+    "* Extend and/or modify your script from Exercise 3 to parse this data file using the Pydantic model you created.\n",
+    "* Take the 2023 data obtained in Exercise 3 and compute daily averages with upper and lower bounds.\n",
+    "* Plot the two datasets on top of one another and compare this years temperature data to the long-term averages.\n",
+    "* Create yet another Pydantic model to combine the two datasets into one. The design of this structure is up to you, but it must be a Pydantic model.\n",
+    "* Serialize the combined dataset to disk (e.g. using `pydantic.BaseModel.dict` or ``pydantic.BaseModel.json`)."
    ]
   },
   {
