Add concepts sections to advanced usage notebooks

--- a/notebooks/3-advanced-usage-part-I.ipynb
+++ b/notebooks/3-advanced-usage-part-I.ipynb
@@ -5,7 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced Usage I"
+    "# 3. Advanced Usage I\n",
+    "\n",
+    "**Concepts:**\n",
+    "- Complex types, typed lists and dictionaries\n",
+    "- Complex types, Enums and Unions\n",
+    "- Datetime types\n",
+    "- Custom types / hierarchical structures\n",
+    "- Private attributes\n",
+    "\n"
    ]
   },
   {
@@ -753,13 +761,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -874,12 +875,6 @@
    "source": [
     "Note that it is also not being validated, just as a normal Python attribute."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
