--- a/notebooks/3-advanced-usage-part-II.ipynb
+++ b/notebooks/3-advanced-usage-part-II.ipynb
@@ -5,7 +5,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced Usage II\n",
+    "# 3. Advanced Usage II\n",
+    "\n",
+    "**Concepts:**\n",
+    "- Type Validation\n",
+    "- `validator` decorator\n",
+    "- `root_validator` decorator\n",
+    "- Skipping validation\n",
+    "- `validate_arguments` decorator\n",
+    "\n",
+    "\n",
     "## Type Validation\n",
     "\n",
     "We saw a sneak peak of type validation in Part 2. Basic Usage. Now we are going to take a deep dive in type validation with Pydantic.\n",
