Improve section on class variables and private attributes

--- a/notebooks/3-advanced-usage-part-I.ipynb
+++ b/notebooks/3-advanced-usage-part-I.ipynb
@@ -12,7 +12,7 @@
     "- Complex types, Enums and Unions\n",
     "- Datetime types\n",
     "- Custom types / hierarchical structures\n",
-    "- Private attributes\n",
+    "- Private attributes and class variables\n",
     "\n"
    ]
   },
@@ -765,9 +765,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Excluded and Private Attributes\n",
+    "### Private Attributes and Class Variables\n",
     "\n",
-    "By default all attributes of a Pydantic models are public and part of the model definition. However, sometimes we want to define attributes, which are not part of the pydantic model. The usual Python convention for non-public attributes is to prefix them with an underscore. Pydantic automatically excludes all attributes starting with an underscore from the model in combination with the `PrivateAttr` type:\n"
+    "Because of the way how model attributes are defined in Pydantic, we cannoy simply define a normal class attribute or \"normal\" Python attribute for a class. However in some cases we might want to introduce e.g. an internal attribute that is not part of the Pydantic model. The usual Python convention for non-public attributes is to prefix them with an underscore `_`. By convention attributes starting with an underscore are excluded from the Pydantic model.\n",
+    "\n",
+    "Let's try the following first:"
    ]
   },
   {
@@ -776,14 +778,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydantic import BaseModel, PrivateAttr\n",
+    "from pydantic import BaseModel\n",
     "\n",
     "\n",
     "class LineV4(BaseModel):\n",
     "    \"\"\"Line object represented by a list of points\"\"\"\n",
     "\n",
     "    points: list[Point]\n",
-    "    _color: LineColor = PrivateAttr(LineColor.red)\n",
+    "    _color: LineColor = LineColor.red\n",
     "\n",
     "    def is_red(self):\n",
     "        return self._color == LineColor.red"
@@ -794,7 +796,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's instantiate the model using an invalid value:"
+    "Let's instantiate the model:"
    ]
   },
   {
@@ -804,7 +806,7 @@
    "outputs": [],
    "source": [
     "line_with_hidden_color = LineV4(\n",
-    "    points=[Point(x=0, y=0), Point(x=1, y=1)], _color=\"violet\"\n",
+    "    points=[Point(x=0, y=0), Point(x=1, y=1)],\n",
     ")"
    ]
   },
@@ -813,7 +815,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the private attribute is automatically excluded form the model definiton it is neither validated nor parsed. So the values is still set to the default value:"
+    "You can see that the `_color` attribute is not part of the model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_with_hidden_color.__fields__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But you can access it internally as usual, e.g. in the `is_red()` method we defined above:"
    ]
   },
   {
@@ -830,7 +849,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The private attribute basically behaves like a normal Python class attribute. So we have to set it on init \"by hand\":"
+    "However it cannot be modified from the outside:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "line_with_hidden_color._color = \"blue\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This behaviour is obviously is different from a \"normal\" Python class attribute. \n",
+    "\n",
+    "Howver if you need to vary or manipulate internal attributes on instances of the model, you can declare them using `PrivateAttr` instead:"
    ]
   },
   {
@@ -842,12 +884,81 @@
     "from pydantic import BaseModel, PrivateAttr\n",
     "\n",
     "\n",
-    "class LineV4(BaseModel):\n",
+    "class LineV5(BaseModel):\n",
     "    \"\"\"Line object represented by a list of points\"\"\"\n",
     "\n",
     "    points: list[Point]\n",
     "    _color: LineColor = PrivateAttr(LineColor.red)\n",
     "\n",
+    "    # as this now behaves as a \"normal\" Python attribute, we need to set it on init\n",
+    "    def __init__(self, **data):\n",
+    "        super().__init__(**data)\n",
+    "        self._color = data.get(\"_color\", LineColor.red)\n",
+    "\n",
+    "    def is_red(self):\n",
+    "        return self._color == LineColor.red"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try the behaviour now:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_with_hidden_color = LineV5(\n",
+    "    points=[Point(x=0, y=0), Point(x=1, y=1)], _color=\"violet\"\n",
+    ")\n",
+    "\n",
+    "line_with_hidden_color.is_red()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_with_hidden_color._color = \"red\"\n",
+    "line_with_hidden_color.is_red()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now this behaves like a normal Python class attribute. But note that it is also not being validated, just as a normal Python attribute. That's why we could set it to violet, even though it is not a valid color.\n",
+    "\n",
+    "In case you have many private attributes you can also use the config setting to achieve the equivalent behaviour:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel\n",
+    "\n",
+    "\n",
+    "class LineV6(BaseModel):\n",
+    "    \"\"\"Line object represented by a list of points\"\"\"\n",
+    "\n",
+    "    points: list[Point]\n",
+    "    _color: LineColor = LineColor.red\n",
+    "\n",
+    "    class Config:\n",
+    "        underscore_attrs_are_private = True\n",
+    "\n",
+    "    # as this now behaves as a \"normal\" Python attribute, we need to set it on init\n",
     "    def __init__(self, **data):\n",
     "        super().__init__(**data)\n",
     "        self._color = data.get(\"_color\", LineColor.red)\n",
@@ -862,9 +973,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_with_hidden_color = LineV4(\n",
-    "    points=[Point(x=0, y=0), Point(x=1, y=1)], _color=\"violet\"\n",
-    ")\n",
+    "line_with_hidden_color = LineV5(points=[Point(x=0, y=0), Point(x=1, y=1)], _color=\"red\")\n",
     "line_with_hidden_color.is_red()"
    ]
   },
@@ -873,7 +982,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that it is also not being validated, just as a normal Python attribute."
+    "Theres is one more rare case to be covered: in some cases you might want to define a class variable, which is shared by all instances of the model. The \"normal\" syntax is occupied by the Pydantic model declaration. However we can still define class variables using the `ClassVar` type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import ClassVar\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "\n",
+    "class LineV6(BaseModel):\n",
+    "    \"\"\"Line object represented by a list of points\"\"\"\n",
+    "\n",
+    "    points: list[Point]\n",
+    "    color: ClassVar[LineColor] = LineColor.red\n",
+    "\n",
+    "    def is_red(self):\n",
+    "        return self._color == LineColor.red"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again the variable is not part of the pydantic model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_global_color = LineV6(\n",
+    "    points=[Point(x=0, y=0), Point(x=1, y=1)],\n",
+    ")\n",
+    "line_global_color.__fields__"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However it can be accessed and modified as a normal Python class variable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "other_line_global_color = LineV6(\n",
+    "    points=[Point(x=0, y=0), Point(x=1, y=1)],\n",
+    ")\n",
+    "\n",
+    "# We modify the class variable\n",
+    "LineV6.color = LineColor.green\n",
+    "\n",
+    "# The change is reflected in both instances\n",
+    "print(line_global_color.color)\n",
+    "print(other_line_global_color.color)"
    ]
   }
  ],
