--- a/notebooks/1-introduction-and-refreshers.ipynb
+++ b/notebooks/1-introduction-and-refreshers.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Motivation\n",
     "\n",
-    "One of the most controversial design choices of Python is the use of dynamic types. Dynamic types of variables can often lead to confusion for beginners, but also for experts it is a common sources of hard-to-find bugs. For this reason the concept of type annotations has been introduced later in the language to allow for static code analysis and more detailed source code documentation. However, type annotations are not enforced by the Python interpreter and therefore do not prevent the user from passing the wrong type of data to a function or class. This can lead to delayed code failure, bad user experiences, and difficult-to-find bugs."
+    "One of the most controversial design choices of Python is the use of dynamic types. Dynamic types of variables can often lead to confusion for beginners, but even for experts it is a common source of hard-to-find bugs. For this reason the concept of type annotations has been introduced later in the language to allow for static code analysis and more detailed source code documentation. However, type annotations are not enforced by the Python interpreter and therefore do not prevent the user from passing the wrong type of data to a function or class. This can lead to delayed code failure, bad user experiences, and difficult-to-find bugs."
    ]
   },
   {
@@ -385,7 +385,7 @@
    "source": [
     "### Refresher 3: Data Classes and \"Friends\"\n",
     "\n",
-    "There is another small problem with the class definitons we introduced above: it includes a lot of so called [\"Boilerplate Code\"](https://en.wikipedia.org/wiki/Boilerplate_code). This is code that is just required to make the defintion work and does not add any functionality. In this case the boilerplate code is the `__init__` method. This method is required to initialize the class, but it does not add any functionality.\n",
+    "There is another small problem with the class definitions we introduced above: it includes a lot of so called [\"Boilerplate Code\"](https://en.wikipedia.org/wiki/Boilerplate_code). This is code that is just required to make the defintion work and does not add any functionality. In this case the boilerplate code is the `__init__` method. This method is required to initialize the class, but it does not add any functionality.\n",
     "\n",
     " In fact, the `__init__` method is so common that Python introduced various shortcuts in the standard library to simplfy the definiton of such data structures. The most common ones are:\n",
     " \n",
@@ -554,7 +554,7 @@
     "\n",
     "## Exercise 1:\n",
     "\n",
-    "- Just take some to briefly discuss with your neighbours the examples where dynamic typing leads to unexpected behaviour. Have you encountered similar issues in the past? How did you solve them? \n",
+    "- Just take some time to briefly discuss with your neighbours the examples where dynamic typing leads to unexpected behaviour. Have you encountered similar issues in the past? How did you solve them? \n",
     "- Also take some time to dicuss the concepts of type annotations, class definitions and data classes we reviewed above. Have you used them in the past? What are your experiences? "
    ]
   }
