--- a/notebooks/2-basic-usage.ipynb
+++ b/notebooks/2-basic-usage.ipynb
@@ -175,7 +175,7 @@
    "id": "b2beef62",
    "metadata": {},
    "source": [
-    "Notice that for `PointV1` (which is not a Pydantic model), the `x` and `y` attributes are exactly as provided, i.e. strings and integers. But for `PointV3` (which is a Pydantic model), the `x` and `y` attributes were converted to floats because the were type hinted as such. Pydantic applied the `float` constructor to the provided values i.e. `float(\"5\") == 5.0`, `float(\"7\") == 7.0`, `float(-1) == -1.0`, and `float(4) == 4.0`. Later, we will discuss the case when this conversion is not possible e.g. `float(\"hello world\")`.\n",
+    "Notice that for `PointV1` (which is not a Pydantic model), the `x` and `y` attributes are exactly as provided, i.e. strings and integers. But for `PointV3` (which is a Pydantic model), the `x` and `y` attributes were converted to floats because they were type hinted as such. Pydantic applied the `float` constructor to the provided values i.e. `float(\"5\") == 5.0`, `float(\"7\") == 7.0`, `float(-1) == -1.0`, and `float(4) == 4.0`. Later, we will discuss the case when this conversion is not possible e.g. `float(\"hello world\")`.\n",
     "\n",
     "Note: `PointV1` and `PointV2` only differ in type hints and have no run-time difference. We would have obtained the same results with `PointV2` as we did with `PointV1`. Try it!\n",
     "\n",
@@ -225,7 +225,7 @@
     "\n",
     "## Atomic types\n",
     "\n",
-    "From this point on, I will refer to Pydantic model attributes as fields, as is doe in the Pydantic documentation.\n",
+    "From this point on, I will refer to Pydantic model attributes as fields, as is done in the Pydantic documentation.\n",
     "\n",
     "Pydantic supports a large variety of field types but the most basic are `None`, `bool`, `int`, `float`, `str` and `bytes`.\n",
     "\n",
@@ -235,7 +235,7 @@
     "\n",
     "### `bool`\n",
     "\n",
-    "The allowed for `True` are `{True, 1, \"1\", \"on\", \"t\", \"true\", \"y\", \"yes\"}`. The allowed values for `False` are `{False, 0, \"0\", \"off\", \"f\", \"false\", \"n\", \"no\"}`.\n",
+    "The allowed values for `True` are `{True, 1, \"1\", \"on\", \"t\", \"true\", \"y\", \"yes\"}`. The allowed values for `False` are `{False, 0, \"0\", \"off\", \"f\", \"false\", \"n\", \"no\"}`.\n",
     "\n",
     "### `int`\n",
     "\n",
@@ -251,7 +251,7 @@
     "\n",
     "### `bytes`\n",
     "\n",
-    "`bytes(v)` will be used to coerce `bytearray`, `v.decode()` will be used to coerce `str`, and `str(v).decode()` will be used to coerce numeric types.\n",
+    "`bytes(v)` will be used to coerce `bytearray`, `v.encode()` will be used to coerce `str`, and `str(v).encode()` will be used to coerce numeric types.\n",
     "\n",
     "Let's see an example of type coercion for each of these types (with the exception of `None` which does not use coercion)."
    ]
@@ -301,7 +301,7 @@
     "\n",
     "What happens when type coercion fails? This brings us to one of the main benefits of using Pydantic -- type validation. We will be discussing this in much more detail in part 3 of this tutorial, but let's get a sense of what will happen now while type coercion is still fresh in our minds.\n",
     "\n",
-    "Recall our earlier example od the two-dimensional coordinate points. If we provided invalid arguments for `PointV1` and `PointV2` (recall these were not Pydantic models), the classes would happily instantiate and we would not see an error until later when trying to compute the distance between two points. And the error message didn't really point to the root cause of the problem, which was the invalid arguments during instantiation. We also showed that when using a Pydantic model (`PointV3`), Pydantic would attempt to correct our mistake for us using type coercion. But what if we provide arguments where type coercion fails? Let's find out. Returning to the earlier example, let's now provide arguments that will not pass type coercion."
+    "Recall our earlier example of the two-dimensional coordinate points. If we provided invalid arguments for `PointV1` and `PointV2` (recall these were not Pydantic models), the classes would happily instantiate and we would not see an error until later when trying to compute the distance between two points. And the error message didn't really point to the root cause of the problem, which was the invalid arguments during instantiation. We also showed that when using a Pydantic model (`PointV3`), Pydantic would attempt to correct our mistake for us using type coercion. But what if we provide arguments where type coercion fails? Let's find out. Returning to the earlier example, let's now provide arguments that will not pass type coercion."
    ]
   },
   {
@@ -383,9 +383,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(LineSegment(x1=5, y1=6, x2=1, y2=9, label=\"red\"))\n",
-    "display(LineSegment(x2=1, y2=9, label=\"red\"))\n",
-    "display(LineSegment(x2=1, y2=9))"
+    "display(\n",
+    "    LineSegment(x1=5, y1=6, x2=1, y2=9, label=\"red\"),\n",
+    ")\n",
+    "display(\n",
+    "    LineSegment(x2=1, y2=9, label=\"red\"),\n",
+    ")\n",
+    "display(\n",
+    "    LineSegment(x2=1, y2=9),\n",
+    ")"
    ]
   },
   {
@@ -398,7 +404,9 @@
     "\n",
     "## Model configuration\n",
     "\n",
-    "Pydantic provides custamizable options for models. The model just needs to define a class called `Config` as an attribute. The attributes of `Config` serve as a configuration for the model. By default, Pydantic models will ignore additional fields provided that are not defined in the class..."
+    "Pydantic provides custamizable options for models. The model just needs to define a class called `Config` as an attribute. The attributes of `Config` serve as a configuration for the model.\n",
+    "\n",
+    "As an example, let's explore what happens when you instantiate a Pydantic model with fields that are not part of the model definition. By default, Pydantic models will ignore these additional fields. Let's provide our `LineSegment` model with an unexpected field..."
    ]
   },
   {
@@ -412,7 +420,9 @@
    },
    "outputs": [],
    "source": [
-    "display(LineSegment(x2=1, y2=9, hello=\"world\"))"
+    "display(\n",
+    "    LineSegment(x2=1, y2=9, hello=\"world\"),\n",
+    ")"
    ]
   },
   {
@@ -421,7 +431,7 @@
    "id": "436944cb",
    "metadata": {},
    "source": [
-    "But we can configure the model to either allow or forbid extra fields not defined in the class..."
+    "As expected the field `hello` was ignored and not included in the instantiated model. But we can configure the model to either allow or forbid extra fields not defined in the class..."
    ]
   },
   {
@@ -447,7 +457,9 @@
     "        extra = Extra.allow\n",
     "\n",
     "\n",
-    "display(LineSegment(x2=1, y2=9, hello=\"world\"))"
+    "display(\n",
+    "    LineSegment(x2=1, y2=9, hello=\"world\"),\n",
+    ")"
    ]
   },
   {
@@ -472,7 +484,9 @@
     "        extra = Extra.forbid\n",
     "\n",
     "\n",
-    "display(LineSegment(x2=1, y2=9, hello=\"world\"))"
+    "display(\n",
+    "    LineSegment(x2=1, y2=9, hello=\"world\"),\n",
+    ")"
    ]
   },
   {
@@ -517,7 +531,7 @@
    "id": "eaa8081a",
    "metadata": {},
    "source": [
-    "Notice that `B`, which inherits from `A`, inherits the field, `x`, and configuration, `extra = Extra.forbid` of `A`, while `C`, which is a base Pydantic model, does not contain the field `x` and obtains the default value of `Extra.ignore` for the `extra` configuration.\n",
+    "Notice that `B`, which inherits from `A`, inherits the field, `x`, and configuration, `extra = Extra.forbid`, of `A`, while `C`, which is a base Pydantic model, does not contain the field `x` and obtains the default value of `Extra.ignore` for the `extra` configuration.\n",
     "\n",
     "A detailed description of possible configurations can be found in the \"Model Config\" documentation page: https://docs.pydantic.dev/latest/usage/model_config/\n",
     "\n",
@@ -554,8 +568,8 @@
     "Write a script that computes and prints the average temperature (in celsius) in Murmansk for the dates provided. In your script, you should include a Pydantic model capable of parsing a single sample from the list of data samples above. You should parse each data sample one at a time using a `for` loop. (We will see how to parse the entire list simultaneously in the next section of this tutorial.)\n",
     "\n",
     "Some potentially helpful notes:\n",
-    "* Some samples are missing data. You should decide how to handle these without inserting new data yourself. Hint: refer to the section \n",
-    "* Some values may produces errors and may need modification.\n",
+    "* Some samples are missing data. You should decide how to handle these without inserting new data yourself (but modification of existing data is OK). Hint: refer to the \"Default and optional values\" section \n",
+    "* Some values may produce errors and may need modification.\n",
     "* You may parse dates and times as strings for this exercise. (We will see a better way to parse dates and times later in this tutorial.)\n",
     "* You may assume `airQualityIndex` is an integer valued categorical variable."
    ]
@@ -563,7 +577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scipy-2023-pydantic-tutorial",
    "language": "python",
    "name": "python3"
   },
