update notebook 3 and fix typos

--- a/notebooks/3-advanced-usage-part-I.ipynb
+++ b/notebooks/3-advanced-usage-part-I.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instanciation of the model works as expected:"
+    "Instantiation of the model works as expected:"
    ]
   },
   {
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By deafult pydantic only validates / parses the values on initialisation. If we want to validate the values on modification we can use the `validate_assignment` configuaration option:"
+    "By default pydantic only validates / parses the values on initialisation. If we want to validate the values on modification we can use the `validate_assignment` configuaration option:"
    ]
   },
   {
@@ -757,7 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you compare to our first implementation at the beginning the `LineV3` is more compact, better readable and more elegant. \n"
+    "If you compare to our first implementation at the beginning, `LineV3` is more compact, readable and elegant. \n"
    ]
   },
   {
@@ -767,7 +767,7 @@
    "source": [
     "### Private Attributes and Class Variables\n",
     "\n",
-    "Because of the way how model attributes are defined in Pydantic, we cannoy simply define a normal class attribute or \"normal\" Python attribute for a class. However in some cases we might want to introduce e.g. an internal attribute that is not part of the Pydantic model. The usual Python convention for non-public attributes is to prefix them with an underscore `_`. By convention attributes starting with an underscore are excluded from the Pydantic model.\n",
+    "Because of the way model attributes are defined in Pydantic, we cannot simply define a normal class attribute or \"normal\" Python attribute for a class. However in some cases we might want to introduce e.g. an internal attribute that is not part of the Pydantic model. The usual Python convention for non-public attributes is to prefix them with an underscore `_`. By convention attributes starting with an underscore are excluded from the Pydantic model.\n",
     "\n",
     "Let's try the following first:"
    ]
@@ -1054,7 +1054,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scipy-2023-pydantic-tutorial",
    "language": "python",
    "name": "python3"
   },
